--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body, html {
+    min-height: 100%;
+}
+
 #custom-search-input{
     border: solid 1px #E4E4E4;
     border-radius: 6px;
@@ -29,20 +33,24 @@
     font-size: 23px;
 }
 
-#gallery input[type = checkbox] {
+#search-results input[type = checkbox] {
     display: none;
 }
 
-#gallery input:checked + label img {
+#search-results input:checked + label img {
     border: 2px solid deepskyblue;
 
 }
 
-#gallery div {
+#search-results {
+    margin-top: 50px;
+}
+
+#search-results div {
     display: inline-block;
 }
 
-#gallery img {
+#search-results img {
     border: 2px solid transparent;
     width: 100%;
 }
@@ -53,6 +61,45 @@ h1{
 
 #gallery-button {
     width: 100%;
+}
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    top: 0;
+    left: 0;
+    z-index: 2;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+#gallery {
+    border: 1px solid black;
+    border-radius: 6px;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    padding: 10px;
+}
+
+#selected-photo {
+    align-self: center;
+    max-width:100%;
+    max-height: 100%;
+}
+
+footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height:40px;
+    background-color: black;
+    color: white;
+    padding: 10px;
 }
 
 
